--- a/test.html
+++ b/test.html
@@ -9,6 +9,6 @@
 	test
 </body>
   <script>
-    history.pushState(stateObj, "page 2", "en");
+    history.pushState({}, "page 2", "en");
   </script>
 </html>
