--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
 	<body>
 		<div class="full-green"></div>
 		<div class="full-red"></div>
-		<a href="./test.html">test</a>
+		<a href="/test">test</a>
 	</body>
 </html>
