--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -25,6 +25,7 @@
 	<body>
 		<div class="full-green"></div>
 		<div class="full-red"></div>
-		<a href="/test">test</a>
+		<a href="/ru">РУСКА</a>
+		<a href="/en">ГЛІСЬКА</a>
 	</body>
 </html>
