--- a/source/text.html
+++ b/source/text.html
@@ -8,19 +8,6 @@
     <title>404</title>
   </head>
   <body>
-    <main class="notfound">
-      <!-- <a class="notfound__logo logo" href="index.html">katruk design</a>  -->
-      <div class="notfound__row">
-        <div class="notfound__col col">
-          <span class="col__number">404</span>
-          <span class="col__title">Страница не найдена</span>
-          <p class="col__text">
-            Что-то пошло не так. Похоже страницы не существует
-          </p>
-          <button class="col__btn button">на главную</button>
-        </div>
-        <img class="notfound__pic" src="./img/saly.png" alt="#" />
-      </div>
-    </main>
+   urrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr
   </body>
 </html>
