--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 						<button class="button" id="mobile__button">ОБСУДИТЬ</button>
 						<div class="mobile__lang" >
 							<a href="#" class="">рус/</a>
-							<a href="./index-uk.html" class="">укр</a>
+							<a href="/ua" class="">укр</a>
 						</div>
 					</div>
 				</div>
@@ -80,7 +80,7 @@
 		<header class="header" id="header">
 			<div class="container">
 				<div class="header__row">
-					<a href="index.html" class="logo">
+					<a href="#" class="logo">
 						<svg
 							class="logo__sign"
 							width="298"
