--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
 								data-aos-duration="2000"
 							>
 								<a href="#" class="bot__lang-ru">рус </a>
-								<a href="./index-uk.html" class="bot__lang-ua"> укр</a>
+								<a href="/ua" class="bot__lang-ua"> укр</a>
 							</div>
 						</div>
 					</div>
