--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
 								</a>
 								<div class="bot__conditions conditions">
 									<span class="conditions__year">© 2021</span>
-									<a class="conditions__agreement" href="./terms.html"
+									<a class="conditions__agreement" href="/ru/terms"
 										>Пользовательское соглашение</a
 									>
 								</div>
