--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
 					<div class="bot__inner">
 						<div class="bot__row">
 							<div class="bot__col" data-aos="fade-up" data-aos-duration="2000">
-								<a class="bot__logo logo" href="./index.html">
+								<a class="bot__logo logo" href="#">
 									<svg
 										class="logo__sign"
 										width="374"
