--- a/ua/index.html
+++ b/ua/index.html
@@ -59,10 +59,10 @@
 						<img src="../img/close.png" alt="" srcset="">
 				</div>
 				<div class="mobile__links">
-					<span><a href="#">Головна</a></span>
-					<span><a href="#why">Чому ми</a></span>
-					<span><a href="#what">Що робимо</a></span>
-					<span><a href="#how">Як робимо</a></span>
+					<span><a href="/ua">Головна</a></span>
+					<span><a href="/ua#why">Чому ми</a></span>
+					<span><a href="/ua#what">Що робимо</a></span>
+					<span><a href="/ua#how">Як робимо</a></span>
 					<span><a href="">Готові обговорити проект?</a></span>
 				</div>
 				<div class="mobile__bottom">
