--- a/ua/index.html
+++ b/ua/index.html
@@ -128,7 +128,7 @@
 					<nav class="header__menu">
 						<ul class="header__list">
 							<li class="header__item">
-								<a class="header__link" href="#why">Чому мы</a>
+								<a class="header__link" href="#why">Чому ми</a>
 							</li>
 							<li class="header__item">
 								<a class="header__link" href="#what">Що робимо</a>
