--- a/ua/index.html
+++ b/ua/index.html
@@ -156,7 +156,7 @@
 							<div class="popup__text">Обговорити проект</div>
 							<div class="popup__input" id="popup__name">
 								<label for="name">Як вас звати?</label>
-								<input type="text" id="name" placeholder="Имя" />
+								<input type="text" id="name" placeholder="Ім'я" />
 								<div class="popup__warning">Обов'язкове поле</div>
 								<img
 									class="popup__error"
