--- a/ua/index.html
+++ b/ua/index.html
@@ -289,7 +289,7 @@
 									</p>
 									<ul class="item__list">
 										<li class="item__point">Аналіз ринку</li>
-										<li class="item__point">Створення диизайн-концепції</li>
+										<li class="item__point">Створення дизайн-концепції</li>
 										<li class="item__point">Розробка сайту з нуля</li>
 										<li class="item__point">2 ітерації правок</li>
 										<li class="item__point">Підтримка протягом 14 днів</li>
@@ -300,7 +300,7 @@
 							<div class="item__wrapper">
 								<div class="what__item item">
 									<span class="item__title">Діджиталізація</span>
-									<p class="item__caption">Перевадіть Ваш бізнес в онлайн</p>
+									<p class="item__caption">Переведіть Ваш бізнес в онлайн</p>
 									<ul class="item__list">
 										<li class="item__point">Аналіз ринку</li>
 										<li class="item__point">Створення 2 дизайн-концепцій</li>
