--- a/ua/index.html
+++ b/ua/index.html
@@ -390,7 +390,7 @@
 								<span class="how__caption">Запуск та Розвиток</span>
 							</div>
 							<p class="how__text">
-								На останньому етапі проводиться перевірка працездатності та зручності сайту. Для просування використовуюються рекламні кабінети Facebook<br />
+								На останньому етапі проводиться перевірка працездатності та зручності сайту. Для просування використовуються рекламні кабінети Facebook<br />
 								і Google з урахуванням попиту в інтернеті на ваш продукт або послугу
 							</p>
 						</div>
