--- a/ru/terms.html
+++ b/ru/terms.html
@@ -349,7 +349,7 @@
 						Все противоречия, что возникли в связи с Соглашением, подлежат
 						рассмотрению в суде по месту нахождения Администрации сайта согласно
 						с действующим законодательством Украины.
-						<a href="./index.html" class="main__return">Вернуться на главную</a>
+						<a href="/" class="main__return">Вернуться на главную</a>
 					</div>
 				</div>
 			</main>
