--- a/ua/terms.html
+++ b/ua/terms.html
@@ -57,7 +57,7 @@
 				</div>
 				<div class="mobile__links">
 					<span><a href="/">Головна</a></span>
-					<span><a href="/#why">Чому мы</a></span>
+					<span><a href="/#why">Чому ми</a></span>
 					<span><a href="/#what">Що робимо</a></span>
 					<span><a href="/#how">Як робимо</a></span>
 					<span><a href="">Готові обговорити проект?</a></span>
