--- a/ua/terms.html
+++ b/ua/terms.html
@@ -63,7 +63,9 @@
 					<span><a href="">Готові обговорити проект?</a></span>
 				</div>
 				<div class="mobile__bottom">
-					<div class="mobile__number">+(380) 50 849-49-70</div>
+					<div class="mobile__number">
+						<a href="tel:+380508494970"> +(380) 50 849-49-70</a>
+					</div>
 					<div class="mobile__row">
 						<button class="button" id="mobile__button">ОБГОВОРИТИ</button>
 						<div class="mobile__lang">
@@ -127,7 +129,9 @@
 						<a href="/ua/terms" class="lang-uk"> укр</a>
 					</div>
 					<div class="contacts">
-						<a class="header__phone" href="tel">+380 50 849-49-70</a>
+						<a class="header__phone" href="tel:+380508494970"
+							>+380 50 849-49-70</a
+						>
 						<button class="header__btn button" id="header__btn">
 							ОБГОВОРИТИ
 						</button>
