--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					<span><a href="">Готовы обсудить проект?</a></span>
 				</div>
 				<div class="mobile__bottom">
-					<div class="mobile__number">+(380) 50 849-49-70</div>
+					<div class="mobile__number"><a href="tel:+380508494970">+(380) 50 849-49-70</a></div>
 					<div class="mobile__row">
 						<button class="button" id="mobile__button">ОБСУДИТЬ</button>
 						<div class="mobile__lang" >
@@ -138,7 +138,7 @@
 							</li>
 						</ul>
 					</nav>
-					<a class="header__phone" href="tel">+380 50 849-49-70</a>
+					<a class="header__phone" href="tel:+380508494970">+380 50 849-49-70</a>
 					<button class="header__btn button" id="header__btn">обсудить</button>
 					<span class="mobile__menu" id="mobile_menu_open" >
 						<svg width="27" height="19" viewBox="0 0 27 19" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -226,7 +226,8 @@
 							<div
 								class="why__item item"
 								data-aos="fade-up"
-								data-aos-anchor-placement="top-center"
+								data-aos-once="true"
+								data-aos-anchor-placement="center-bottom"
 							>
 								<div class="item__row">
 									<div class="item__circle">
@@ -243,7 +244,8 @@
 							<div
 								class="why__item item"
 								data-aos="fade-up"
-								data-aos-anchor-placement="top-center"
+								data-aos-once="true"
+								data-aos-anchor-placement="center-bottom"
 							>
 								<div class="item__row">
 									<div class="item__circle">
@@ -260,7 +262,8 @@
 							<div
 								class="why__item item"
 								data-aos="fade-up"
-								data-aos-anchor-placement="top-center"
+								data-aos-once="true"
+								data-aos-anchor-placement="center-bottom"
 							>
 								<div class="item__row">
 									<div class="item__circle">
@@ -541,8 +544,8 @@
 				</div>
 			</footer>
 		</div>
-		<script src="../source/js/popup.js"></script>
-		<script src="../source/js/validate.js"></script>
+		<script src="/source/js/popup.js"></script>
+		<script src="/source/js/validate.js"></script>
 		<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 		<script>
 			AOS.init();
