--- a/ua/index.html
+++ b/ua/index.html
@@ -66,7 +66,7 @@
 					<span><a href="">Готові обговорити проект?</a></span>
 				</div>
 				<div class="mobile__bottom">
-					<div class="mobile__number">+(380) 50 849-49-70</div>
+					<div class="mobile__number"><a href="tel:+380508494970">+(380) 50 849-49-70</a></div>
 					<div class="mobile__row">
 						<button class="button" id="mobile__button">ОБГОВОРИТИ</button>
 						<div class="mobile__lang" >
@@ -138,7 +138,7 @@
 							</li>
 						</ul>
 					</nav>
-					<a class="header__phone" href="tel">+380 50 849-49-70</a>
+					<a class="header__phone" href="tel:+380508494970">+380 50 849-49-70</a>
 					<button class="header__btn button" id="header__btn">ОБГОВОРИТИ</button>
 					<span class="mobile__menu" id="mobile_menu_open" >
 						<svg width="27" height="19" viewBox="0 0 27 19" fill="none" xmlns="http://www.w3.org/2000/svg">
