--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
 			</footer>
 		</div>
 		<script src="/source/js/popup.js"></script>
-		<script src="/source/js/validate.js"></script>
+		<script src="/source/js/validate.js" type="text/javascript"></script>
 		<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 		<script>
 			AOS.init();
