--- a/ru/terms.html
+++ b/ru/terms.html
@@ -353,7 +353,19 @@
 						Все противоречия, что возникли в связи с Соглашением, подлежат
 						рассмотрению в суде по месту нахождения Администрации сайта согласно
 						с действующим законодательством Украины.
-						<a href="/" class="main__return">Вернуться на главную</a>
+						<a href="/" class="main__return"
+							><svg
+								viewBox="0 0 17 17"
+								fill="none"
+								xmlns="http://www.w3.org/2000/svg"
+							>
+								<path
+									d="M15.7917 7.4584H4.15625L9.23958 2.37507C9.64583 1.96882 9.64583 1.30215 9.23958 0.895905C8.83333 0.489655 8.17708 0.489655 7.77083 0.895905L0.90625 7.76049C0.5 8.16674 0.5 8.82299 0.90625 9.22924L7.77083 16.0938C8.17708 16.5001 8.83333 16.5001 9.23958 16.0938C9.64583 15.6876 9.64583 15.0313 9.23958 14.6251L4.15625 9.54174H15.7917C16.3646 9.54174 16.8333 9.07299 16.8333 8.50007C16.8333 7.92715 16.3646 7.4584 15.7917 7.4584Z"
+									fill="#000356"
+								/>
+							</svg>
+							Вернуться на главную</a
+						>
 					</div>
 				</div>
 			</main>
