--- a/index.html
+++ b/index.html
@@ -450,6 +450,9 @@
 									></textarea>
 								</p>
 								<div id="main__form_btn" class="button">отправить</div>
+								<div class="popup__warning" id="mainform__warn">
+									Пожалуйста, заполните все обязательные поля
+								</div>
 							</form>
 						</div>
 					</div>
