--- a/ua/index.html
+++ b/ua/index.html
@@ -441,6 +441,9 @@
 									></textarea>
 								</p>
 								<div id="main__form_btn" class="button">НАДІСЛАТИ</div>
+								<div class="popup__warning" id="mainform__warn">
+									Будь ласка, заповніть всі обов'язкові поля
+								</div>
 							</form>
 						</div>
 					</div>
