--- a/ua/index.html
+++ b/ua/index.html
@@ -281,9 +281,9 @@
 				</section>
 				<section class="what" id="what">
 					<div class="container">
-						<span class="what__title" data-aos="fade-right" data-aos-duration="1000">Що робимо</span>
+						<span class="what__title" data-aos-duration="1500" data-aos="fade-right">Що робимо</span>
 						<div class="what__row">
-							<div class="item__wrapper" data-aos="zoom-out-right" data-aos-duration="1000">
+							<div class="item__wrapper" data-aos="zoom-out-right" data-aos-duration="1500">
 								<div class="what__item item">
 									<span class="item__title">Веб-сайт</span>
 									<p class="item__caption">
@@ -299,7 +299,7 @@
 									<span class="item__price">від $300</span>
 								</div>
 							</div>
-							<div class="item__wrapper" data-aos="zoom-out-left" data-aos-duration="1000">
+							<div class="item__wrapper" data-aos="zoom-out-left" data-aos-duration="1500">
 								<div class="what__item item">
 									<span class="item__title">Діджиталізація</span>
 									<p class="item__caption">Переведіть Ваш бізнес в онлайн</p>
