--- a/index.html
+++ b/index.html
@@ -284,9 +284,9 @@
 				</section>
 				<section class="what" id="what">
 					<div class="container">
-						<span class="what__title" data-aos="fade-right" data-aos-duration="1000">Что делаем</span>
+						<span class="what__title" data-aos-duration="1500" data-aos="fade-right">Что делаем</span>
 						<div class="what__row">
-							<div class="item__wrapper" data-aos="zoom-out-right" data-aos-duration="1000">
+							<div class="item__wrapper" data-aos-duration="1500" data-aos="zoom-out-right" >
 								<div class="what__item item">
 									<span class="item__title">Веб-сайт</span>
 									<p class="item__caption">
@@ -302,7 +302,7 @@
 									<span class="item__price">от $300</span>
 								</div>
 							</div>
-							<div class="item__wrapper" data-aos="zoom-out-left" data-aos-duration="1000">
+							<div class="item__wrapper" data-aos-duration="1500" data-aos="zoom-out-left" >
 								<div class="what__item item">
 									<span class="item__title">Диджитализация</span>
 									<p class="item__caption">Переведите Ваш бизнес в онлайн</p>
