--- a/ru/terms.html
+++ b/ru/terms.html
@@ -221,112 +221,111 @@
 						<br />
 
 						Предметом соглашения является предоставление Администрацией сайта
-						Пользователю услуг по использованию сайта (далее — Услуги).
-						Используя сайт, вы заведомо соглашаетесь с условиями этого
+						Пользователю услуг по использованию сайта (далее — Услуги).
+						Используя сайт, вы заведомо соглашаетесь с условиями этого
 						Соглашения.
 						<br />
 						<br />
-						Настоящее Соглашение вступает в силу с момента начала использования
-						Сайта и действует на протяжении неопределённого периода времени,
-						регулируется и толкуется согласно законодательства Украины.
+						Настоящее Соглашение вступает в силу с момента начала использования
+						Сайта и действует на протяжении неопределённого периода времени,
+						регулируется и толкуется согласно законодательства Украины.
 						<br />
 						<br />
-						Заключать данное Соглашение имеют право лица, достигшие 18 лет.
+						Заключать данное Соглашение имеют право лица, достигшие 18 лет.
 						<br />
 						<br />
-						Все объекты, что размещены на сайте, включая элементы дизайна,
-						текст, графические изображения и иллюстрации являются собственностью
-						Администрации Сайта. Администрация в свою очередь даёт право
-						Пользователю на использование сайта в рамках этого Соглашения.
+						Все объекты, что размещены на сайте, включая элементы дизайна,
+						текст, графические изображения и иллюстрации являются собственностью
+						Администрации Сайта. Администрация в свою очередь даёт право
+						Пользователю на использование сайта в рамках этого Соглашения.
 						<br />
 						<br />
-						Использование сайта с целью копирования и/или распространения
-						элементов дизайна и контента, что находятся на сайте, строго
+						Использование сайта с целью копирования и/или распространения
+						элементов дизайна и контента, что находятся на сайте, строго
 						запрещено.
 						<br />
 						<br />
-						Пользователь не имеет права воспроизводить, продавать
-						или использовать в коммерческих целях любую из частей сайта, кроме
-						тех случаев, когда Пользователь получил письменное разрешение
-						от Администрации Сайта.
+						Пользователь не имеет права воспроизводить, продавать или
+						использовать в коммерческих целях любую из частей сайта, кроме тех
+						случаев, когда Пользователь получил письменное разрешение от
+						Администрации Сайта.
 						<span class="main__title">Политика Конфиденциальности</span>
-						1) Эта Политика является неотъемлемой частью Пользовательского
+						1) Эта Политика является неотъемлемой частью Пользовательского
 						Соглашения.
 						<br />
 						<br />
-						2)Политика Конфиденциальности распространяется на все данные,
-						что пользователь может предоставить во время использования сайта.
+						2)Политика Конфиденциальности распространяется на все данные, что
+						пользователь может предоставить во время использования сайта.
 						<br />
 						<br />
-						3) При использовании сайта, Пользователь даёт полное согласие
-						на обработку Персональных Данных, а именно: фамилия имя отчество;
-						дата рождения; контактный номер телефона, адрес электронной почты
-						а также другие Персональные Данные, что могут быть использованы
-						для идентификации Лица.
+						3) При использовании сайта, Пользователь даёт полное согласие на
+						обработку Персональных Данных, а именно: фамилия имя отчество; дата
+						рождения; контактный номер телефона, адрес электронной почты а также
+						другие Персональные Данные, что могут быть использованы для
+						идентификации Лица.
 						<br />
 						<br />
-						4) Далее Лицо становится Пользователем и даёт разрешение
-						на следующие способы обработки Персональной Информации: сбор,
-						запись, систематизация, хранение, уточнение (обновление и изменение,
-						изъятие, использование, передачу и распространение, обезличивание,
-						блокирование, удаление с использование средств автоматизации
-						или без таковых по усмотрению Администрации.
+						4) Далее Лицо становится Пользователем и даёт разрешение на
+						следующие способы обработки Персональной Информации: сбор, запись,
+						систематизация, хранение, уточнение (обновление и изменение,
+						изъятие, использование, передачу и распространение, обезличивание,
+						блокирование, удаление с использование средств автоматизации или без
+						таковых по усмотрению Администрации.
 						<br />
 						<br />
-						5) Данные Пользователя могут использоваться в следующих — 
-						Предоставление Пользователю доступ к ресурсам Сайта —  Установление
-						с Пользователем обратной связи, включая телефонный звонок, отправка
-						сообщений касательно Услуг компании и прочее —  Осуществление
-						рекламной деятельности Сайта. —  Определение местоположения
-						Пользователя с целью предотвращения мошенничества.
+						5) Данные Пользователя могут использоваться в следующих —
+						Предоставление Пользователю доступ к ресурсам Сайта — Установление с
+						Пользователем обратной связи, включая телефонный звонок, отправка
+						сообщений касательно Услуг компании и прочее — Осуществление
+						рекламной деятельности Сайта. — Определение местоположения
+						Пользователя с целью предотвращения мошенничества.
+						<br />
+
+						<br />
+						6) Данный сайт может использовать технологию, известную как
+						cookie-файл. Cookie-файлы увеличивают работоспособность сайта и
+						помогают нам анализировать использование сайта с большей точностью.
 						<br />
 						<br />
-						6) Данный сайт может использовать технологию, известную
-						как cookie-файл. Cookie-файлы увеличивают работоспособность сайта
-						и помогают нам анализировать использование сайта с большей
-						точностью.
-						<br />
-						<br />
-						7) Пользователь согласен с тем, что Администрация сайта не несёт
-						ответственности и не имеет прямых или косвенных обязательств
-						перед Пользователем связи с любыми возможными или случившимися
-						потерями и убытками, связанными с любым содержанием сайта,
-						регистрацией авторских прав и ведомостями про такую регистрацию,
-						товарами или услугами, доступными или полученными через внешние
-						сайты или ресурсы или другие контакты Пользователя, в которые
-						он вступил, используя размещённую на сайте информацию или ссылки
-						на внешние ресурсы.
+						7) Пользователь согласен с тем, что Администрация сайта не несёт
+						ответственности и не имеет прямых или косвенных обязательств перед
+						Пользователем связи с любыми возможными или случившимися потерями и
+						убытками, связанными с любым содержанием сайта, регистрацией
+						авторских прав и ведомостями про такую регистрацию, товарами или
+						услугами, доступными или полученными через внешние сайты или ресурсы
+						или другие контакты Пользователя, в которые он вступил, используя
+						размещённую на сайте информацию или ссылки на внешние ресурсы.
 						<span class="main__title">Права и Обяззаности сторон</span>
 						Пользователь имеет право: <br /><br />
-						— Получать информацию на Сайте <br /><br />
-						— Делиться информацией с сайта в социальных сетях с указанием ссылки
-						на первоисточник <br /><br />
+						— Получать информацию на Сайте <br /><br />
+						— Делиться информацией с сайта в социальных сетях с указанием ссылки
+						на первоисточник <br /><br />
 						Администрация имеет право: <br /><br />
-						— По своему усмотрению и при необходимости создавать, изменять
-						и отменять правила <br /><br />
-						— Ограничивать доступ к любой информации на Сайте <br /><br />
-						— Создавать, изменять, дополнять и удалять информацию, распоряжаться
-						статистической информа- цией, связанной с работой Сайта <br /><br />
-						— Вносить изменения в настоящее Соглашение без согласия
-						и уведомления Пользователя <br /><br />
+						— По своему усмотрению и при необходимости создавать, изменять и
+						отменять правила <br /><br />
+						— Ограничивать доступ к любой информации на Сайте <br /><br />
+						— Создавать, изменять, дополнять и удалять информацию, распоряжаться
+						статистической информа- цией, связанной с работой Сайта <br /><br />
+						— Вносить изменения в настоящее Соглашение без согласия и
+						уведомления Пользователя <br /><br />
 						Пользователь Обязуется: <br /><br />
-						— Предоставить информацию про Персональные Данные, необходимые
-						для использования Сайта <br /><br />
-						— В случае заключения Договора с Администрацией, обновить
-						или дополнить информацию о Персональных Данных при необходимости
+						— Предоставить информацию про Персональные Данные, необходимые для
+						использования Сайта <br /><br />
+						— В случае заключения Договора с Администрацией, обновить или
+						дополнить информацию о Персональных Данных при необходимости
 						<br /><br />
-						— Не нарушать работоспособность Сайта <br /><br />
-						— Не использовать скрипты (программы) для автоматизированного сбора
-						информации и/или взаимодействия с сайтом и его Сервисами
+						— Не нарушать работоспособность Сайта <br /><br />
+						— Не использовать скрипты (программы) для автоматизированного сбора
+						информации и/или взаимодействия с сайтом и его Сервисами
 						<br /><br />
-						— Уважать авторское право касательно субъектов этого права на Сайте
+						— Уважать авторское право касательно субъектов этого права на Сайте
 						<br /><br />
 						Администрация Обязуется: <br /><br />
-						— Не нарушать работоспособность Сайта <br /><br />
-						— Использовать полученную от Пользователя исключительно в целях,
+						— Не нарушать работоспособность Сайта <br /><br />
+						— Использовать полученную от Пользователя исключительно в целях,
 						предусмотренных этим Соглашением <br /><br />
-						— Обеспечить надёжное сбережение конфиденциальной информации,
-						не разглашать её а также не осуществлять обмен/продажу/публикацию
+						— Обеспечить надёжное сбережение конфиденциальной информации, не
+						разглашать её а также не осуществлять обмен/продажу/публикацию
 						<br />
 						<span class="main__title">Ответственность сторон</span>
 						Администрация не несет ответственности за разбежность ожиданий
@@ -335,24 +334,24 @@
 						предоставляются третьими лицами.
 						<span class="main__title">Заключительное Положение</span>
 						Настоящее Соглашение регулируется действующим законодательством
-						Украины. Вопросы, что не были рассмотрены в настоящем Соглашении,
+						Украины. Вопросы, что не были рассмотрены в настоящем Соглашении,
 						подлежат разрешению согласно действующего законодательства.
 						<br />
 						<br />
-						Временное бездействие со стороны Администрации сайта не лишает права
-						принять соответствующие меры позже, а также не означает,
-						что Администрация сайта отказалась от своих прав в случае совершения
-						подобных нарушений в будущем.
+						Временное бездействие со стороны Администрации сайта не лишает права
+						принять соответствующие меры позже, а также не означает, что
+						Администрация сайта отказалась от своих прав в случае совершения
+						подобных нарушений в будущем.
 						<br />
 						<br />
-						Признание любого положения Соглашения недействительным или таковым,
-						что не является обязательным к исполнению, не влечёт
+						Признание любого положения Соглашения недействительным или таковым,
+						что не является обязательным к исполнению, не влечёт
 						недействительности иных положений.
 						<br />
 						<br />
-						Все противоречия, что возникли в связи с Соглашением, подлежат
-						рассмотрению в суде по месту нахождения Администрации сайта согласно
-						с действующим законодательством Украины.
+						Все противоречия, что возникли в связи с Соглашением, подлежат
+						рассмотрению в суде по месту нахождения Администрации сайта согласно
+						с действующим законодательством Украины.
 						<a href="/" class="main__return"
 							><svg
 								viewBox="0 0 17 17"
