--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 		<link rel="apple-touch-icon" sizes="152x152" href="/img/favicon.png">
 		<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 		<link rel="stylesheet" href="./css/style.css" />
-		<title>Katruk Design</title>
+		<title>Katruk Design - Раработка и Создание брендовых сайтов.
+			Description: Создание сайтов любой сложности.
+		</title>
 	</head>
 	<body>
 		<div class="mobile__popup" id="mobile__popup">
