--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="description" content="Создание сайтов любой сложности.">
+		<meta name="keywords" content="katruk design">
 		<link rel="shortcut icon" type="image/png" href="/img/favicon.png"/>
 		<link rel="apple-touch-icon" sizes="76x76" href="/img/favicon.png">
 		<link rel="apple-touch-icon" sizes="152x152" href="/img/favicon.png">
