--- a/ua/index.html
+++ b/ua/index.html
@@ -511,7 +511,7 @@
 								</div>
 							</div>
 							<div class="bot__col" data-aos="" data-aos-duration="2000">
-								<span class="bot__title">Контакты</span>
+								<span class="bot__title">Контакти</span>
 								<div class="bot__icons">
 									<a href="https://telegram.me/cashismyhustle">
 										<svg
