--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
 								data-aos=""
 								data-aos-duration="2000"
 							>
-								<a href="#" class="bot__lang-ru">рус </a>
+								<a href="/" class="bot__lang-ru">рус </a>
 								<a href="/ua" class="bot__lang-ua"> укр</a>
 							</div>
 						</div>
