--- a/index.html
+++ b/index.html
@@ -6,11 +6,20 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="description" content="Создание сайтов любой сложности.">
+		<meta name="description" content="Креативные решения для частых клиентов и малого бизнеса.
+		Эффективное продвижение и качественная реклама.
+		Идеальный баланс между Дизайном и Технологиями.">
 		<meta name="keywords" content="katruk design, катрук, разработка сайта Киев, создание сайта, реклама фейсбук, продвижение в инстаграм">
 		<link rel="shortcut icon" type="image/png" href="/img/favicon.png"/>
-		<link rel="apple-touch-icon" sizes="76x76" href="/img/favicon.png">
-		<link rel="apple-touch-icon" sizes="152x152" href="/img/favicon.png">
+
+		<link rel="apple-touch-icon" sizes="57x57" href="/img/57.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="/img/114.png">
+		<link rel="apple-touch-icon" sizes="72x72" href="/img/72.png">
+		<link rel="apple-touch-icon" sizes="144x144" href="/img/114.png">
+		<link rel="apple-touch-icon" sizes="60x60" href="/img/60.png">
+		<link rel="apple-touch-icon" sizes="120x120" href="/img/120.png">
+		<link rel="apple-touch-icon" sizes="76x76" href="/img/76.png">
+		<link rel="apple-touch-icon" sizes="152x152" href="/img/152.png">
 		<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 		<link rel="stylesheet" href="./css/style.css" />
 		<title>Katruk Design - Раработка и Создание брендовых сайтов</title>
