--- a/index.html
+++ b/index.html
@@ -296,9 +296,9 @@
 				</section>
 				<section class="what" id="what">
 					<div class="container">
-						<span class="what__title" data-aos-duration="1500" data-aos="fade-right">Что делаем</span>
+						<span class="what__title" data-aos-duration="1500" data-aos-once="true" data-aos="fade-right">Что делаем</span>
 						<div class="what__row">
-							<div class="item__wrapper" data-aos-duration="1500" data-aos="zoom-out-right" >
+							<div class="item__wrapper" data-aos-duration="1500" data-aos-once="true" data-aos="zoom-out-right" >
 								<div class="what__item item">
 									<span class="item__title">Веб-сайт</span>
 									<p class="item__caption">
@@ -314,7 +314,7 @@
 									<span class="item__price">от $300</span>
 								</div>
 							</div>
-							<div class="item__wrapper" data-aos-duration="1500" data-aos="zoom-out-left" >
+							<div class="item__wrapper" data-aos-duration="1500" data-aos-once="true" data-aos="zoom-out-left" >
 								<div class="what__item item">
 									<span class="item__title">Диджитализация</span>
 									<p class="item__caption">Переведите Ваш бизнес в онлайн</p>
@@ -357,6 +357,7 @@
 						<span
 							class="how__title"
 							data-aos="fade-up"
+							data-aos-once="true"
 							data-aos-anchor-placement="center-bottom"
 							>Как делаем</span
 						>
@@ -425,6 +426,7 @@
 				<div
 					class="footer__top top"
 					data-aos="fade-up"
+					data-aos-once="true"
 					data-aos-duration="3000"
 				>
 					<div class="container">
@@ -472,7 +474,7 @@
 				</div>
 				<div class="footer__bot bot">
 					<div class="bot__inner">
-						<div class="bot__row" data-aos="fade-up"
+						<div class="bot__row" data-aos="fade-up" data-aos-once="true"
 						data-aos-duration="2000">
 							<div class="bot__col" data-aos="" data-aos-duration="2000">
 								<a class="bot__logo logo" href="#">
