--- a/ua/index.html
+++ b/ua/index.html
@@ -229,6 +229,7 @@
 							<div
 								class="why__item item"
 								data-aos="fade-up"
+								data-aos-once="true"
 								data-aos-anchor-placement="top-center"
 							>
 								<div class="item__row">
@@ -246,6 +247,7 @@
 							<div
 								class="why__item item"
 								data-aos="fade-up"
+								data-aos-once="true"
 								data-aos-anchor-placement="top-center"
 							>
 								<div class="item__row">
@@ -263,6 +265,7 @@
 							<div
 								class="why__item item"
 								data-aos="fade-up"
+								data-aos-once="true"
 								data-aos-anchor-placement="top-center"
 							>
 								<div class="item__row">
@@ -282,9 +285,9 @@
 				</section>
 				<section class="what" id="what">
 					<div class="container">
-						<span class="what__title" data-aos-duration="1500" data-aos="fade-right">Що робимо</span>
+						<span class="what__title" data-aos-duration="1500" data-aos-once="true" data-aos="fade-right">Що робимо</span>
 						<div class="what__row">
-							<div class="item__wrapper" data-aos="zoom-out-right" data-aos-duration="1500">
+							<div class="item__wrapper" data-aos="zoom-out-right" data-aos-once="true" data-aos-duration="1500">
 								<div class="what__item item">
 									<span class="item__title">Веб-сайт</span>
 									<p class="item__caption">
@@ -300,7 +303,7 @@
 									<span class="item__price">від $300</span>
 								</div>
 							</div>
-							<div class="item__wrapper" data-aos="zoom-out-left" data-aos-duration="1500">
+							<div class="item__wrapper" data-aos="zoom-out-left" data-aos-once="true" data-aos-duration="1500">
 								<div class="what__item item">
 									<span class="item__title">Діджиталізація</span>
 									<p class="item__caption">Переведіть Ваш бізнес в онлайн</p>
@@ -343,6 +346,7 @@
 						<span
 							class="how__title"
 							data-aos="fade-up"
+							data-aos-once="true"
 							data-aos-anchor-placement="center-bottom"
 							>Як робимо</span
 						>
@@ -405,6 +409,7 @@
 				<div
 					class="footer__top top"
 					data-aos="fade-up"
+					data-aos-once="true"
 					data-aos-duration="3000"
 				>
 					<div class="container">
@@ -452,7 +457,7 @@
 				</div>
 				<div class="footer__bot bot">
 					<div class="bot__inner">
-						<div class="bot__row" data-aos="fade-up"
+						<div class="bot__row" data-aos="fade-up" data-aos-once="true"
 						data-aos-duration="2000">
 							<div class="bot__col" data-aos="" data-aos-duration="2000">
 								<a class="bot__logo logo" href="#">
@@ -546,6 +551,7 @@
 							</div>
 							<div
 								class="bot__col_lang"
+								data-aos-once="true"
 								data-aos=""
 								data-aos-duration="2000"
 							>
