--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		Эффективное продвижение и качественная реклама.
 		Идеальный баланс между Дизайном и Технологиями.">
 		<meta name="keywords" content="katruk design, катрук, разработка сайта Киев, создание сайта, реклама фейсбук, продвижение в инстаграм">
-		<link rel="shortcut icon" type="image/png" href="/img/favicon.png"/>
+<!-- 		<link rel="shortcut icon" type="image/png" href="/img/favicon.png"/> -->
 
 		<link rel="apple-touch-icon" sizes="57x57" href="/img/57.png">
 		<link rel="apple-touch-icon" sizes="114x114" href="/img/114.png">
