--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 		<meta name="keywords" content="katruk design, катрук, разработка сайта Киев, создание сайта, реклама фейсбук, продвижение в инстаграм">
 		<link rel="shortcut icon" href="/favicon.ico"/>
 
-		<link rel="apple-touch-icon" sizes="57x57" href="/img/57.png">
+<!-- 		<link rel="apple-touch-icon" sizes="57x57" href="/img/57.png">
 		<link rel="apple-touch-icon" sizes="114x114" href="/img/114.png">
 		<link rel="apple-touch-icon" sizes="72x72" href="/img/72.png">
 		<link rel="apple-touch-icon" sizes="144x144" href="/img/114.png">
 		<link rel="apple-touch-icon" sizes="60x60" href="/img/60.png">
 		<link rel="apple-touch-icon" sizes="120x120" href="/img/120.png">
 		<link rel="apple-touch-icon" sizes="76x76" href="/img/76.png">
-		<link rel="apple-touch-icon" sizes="152x152" href="/img/152.png">
+		<link rel="apple-touch-icon" sizes="152x152" href="/img/152.png"> -->
 		<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 		<link rel="stylesheet" href="./css/style.css" />
 		<title>Katruk Design - Раработка и Создание брендовых сайтов</title>
