--- a/ua/index.html
+++ b/ua/index.html
@@ -7,7 +7,16 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <!-- 		<link rel="shortcut icon" type="image/png" href="/img/favicon.png"/> -->
-		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
+		<!-- <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/> -->
+		<link rel="apple-touch-icon" sizes="152x152" href="/img/favicons/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/img/favicons/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/img/favicons/favicon-16x16.png">
+		<link rel="manifest" href="/img/favicons/site.webmanifest">
+		<link rel="mask-icon" href="/img/favicons/safari-pinned-tab.svg" color="#5bbad5">
+		<link rel="shortcut icon" href="/img/favicons/favicon.ico">
+		<meta name="msapplication-TileColor" content="#da532c">
+		<meta name="msapplication-config" content="/img/favicons/browserconfig.xml">
+		<meta name="theme-color" content="#ffffff">
 		<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 		<link rel="stylesheet" href="../css/style.css" />
 		<title>Katruk Design - Раработка и Создание брендовых сайтов</title>
