errorsvg path fixed

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 								<div class="popup__warning">Обязательное поле</div>
 								<img
 									class="popup__error"
-									src="./img/error.svg"
+									src="/img/error.svg"
 									alt=""
 									srcset=""
 								/>
@@ -196,7 +196,7 @@
 								<div class="popup__warning">Обязательное поле</div>
 								<img
 									class="popup__error"
-									src="./img/error.svg"
+									src="/img/error.svg"
 									alt=""
 									srcset=""
 								/>
