--- a/ua/index.html
+++ b/ua/index.html
@@ -171,7 +171,7 @@
 								<div class="popup__warning">Обов'язкове поле</div>
 								<img
 									class="popup__error"
-									src="../img/error.svg"
+									src="/img/error.svg"
 									alt=""
 									srcset=""
 								/>
@@ -193,7 +193,7 @@
 								<div class="popup__warning">Обов'язкове поле</div>
 								<img
 									class="popup__error"
-									src="./img/error.svg"
+									src="/img/error.svg"
 									alt=""
 									srcset=""
 								/>
