--- a/ua/terms.html
+++ b/ua/terms.html
@@ -185,7 +185,7 @@
 								<div class="popup__warning">Обов'язкове поле</div>
 								<img
 									class="popup__error"
-									src="../img/error.svg"
+									src="/img/error.svg"
 									alt=""
 									srcset=""
 								/>
@@ -205,7 +205,7 @@
 								<div class="popup__warning">Обов'язкове поле</div>
 								<img
 									class="popup__error"
-									src="../img/error.svg"
+									src="/img/error.svg"
 									alt=""
 									srcset=""
 								/>
