--- a/ru/terms.html
+++ b/ru/terms.html
@@ -165,7 +165,7 @@
 								<div class="popup__warning">Обязательное поле</div>
 								<img
 									class="popup__error"
-									src="./img/error.svg"
+									src="/img/error.svg"
 									alt=""
 									srcset=""
 								/>
@@ -185,7 +185,7 @@
 								<div class="popup__warning">Обязательное поле</div>
 								<img
 									class="popup__error"
-									src="../img/error.svg"
+									src="/img/error.svg"
 									alt=""
 									srcset=""
 								/>
