--- a/ua/index.html
+++ b/ua/index.html
@@ -518,7 +518,7 @@
 								<a class="bot__email" href="#">katrukdesign@gmail.com</a>
 								<div class="bot__conditions conditions">
 									<span class="conditions__year">© 2021</span>
-									<a class="conditions__agreement" href="/ru/terms"
+									<a class="conditions__agreement" href="/ua/terms"
 										>Угода користувача</a
 									>
 								</div>
