another favicons test

--- a/ua/terms.html
+++ b/ua/terms.html
@@ -14,16 +14,36 @@
 			name="keywords"
 			content="katruk design, катрук, разработка сайта Киев, создание сайта, реклама фейсбук, продвижение в инстаграм"
 		/>
-		<link rel="shortcut icon" type="image/png" href="/img/favicon.png" />
-
-		<link rel="apple-touch-icon" sizes="57x57" href="/img/57.png" />
-		<link rel="apple-touch-icon" sizes="114x114" href="/img/114.png" />
-		<link rel="apple-touch-icon" sizes="72x72" href="/img/72.png" />
-		<link rel="apple-touch-icon" sizes="144x144" href="/img/114.png" />
-		<link rel="apple-touch-icon" sizes="60x60" href="/img/60.png" />
-		<link rel="apple-touch-icon" sizes="120x120" href="/img/120.png" />
-		<link rel="apple-touch-icon" sizes="76x76" href="/img/76.png" />
-		<link rel="apple-touch-icon" sizes="152x152" href="/img/152.png" />
+		<link
+			rel="apple-touch-icon"
+			sizes="180x180"
+			href="/img/favicons/apple-touch-icon.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="/img/favicons/favicon-32x32.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="16x16"
+			href="/img/favicons/favicon-16x16.png"
+		/>
+		<link rel="manifest" href="/img/favicons/site.webmanifest" />
+		<link
+			rel="mask-icon"
+			href="/img/favicons/safari-pinned-tab.svg"
+			color="#5bbad5"
+		/>
+		<link rel="shortcut icon" href="/img/favicons/favicon.ico" />
+		<meta name="msapplication-TileColor" content="#da532c" />
+		<meta
+			name="msapplication-config"
+			content="/img/favicons/browserconfig.xml"
+		/>
+		<meta name="theme-color" content="#ffffff" />
 		<link rel="stylesheet" href="../css/terms.css" />
 		<title>Угода користувача</title>
 	</head>
