--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
 							<div class="bot__col" data-aos="" data-aos-duration="2000">
 								<span class="bot__title">Контакты</span>
 								<div class="bot__icons">
-									<a href="https://telegram.me/cashismyhustle">
+									<a href="https://telegram.me/KatrukD">
 										<svg
 											width="46"
 											height="46"
