--- a/ua/index.html
+++ b/ua/index.html
@@ -541,7 +541,7 @@
 							<div class="bot__col" data-aos="" data-aos-duration="2000">
 								<span class="bot__title">Контакти</span>
 								<div class="bot__icons">
-									<a href="https://telegram.me/cashismyhustle">
+									<a href="https://telegram.me/KatrukD">
 										<svg
 											width="46"
 											height="46"
