--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 		<link rel="icon" type="image/png" sizes="16x16" href="/img/favicons/favicon-16x16.png">
 		<link rel="manifest" href="/img/favicons/site.webmanifest">
 		<link rel="mask-icon" href="/img/favicons/safari-pinned-tab.svg" color="#5bbad5">
+		<link rel="icon" type="image/png" sizes="32x32" href="/img/favicons/favicon-32x32.png">
+		<link rel="shortcut icon" type="image/x-icon" sizes="16x16" href="/img/favicons/favicon.ico">
+		<link rel="shortcut icon" type="image/x-icon" sizes="32x32" href="/img/favicons/favicon.ico">
 		<link rel="shortcut icon" type="image/x-icon" href="/img/favicons/favicon.ico">
 		<meta name="msapplication-TileColor" content="#da532c">
 		<meta name="msapplication-config" content="/img/favicons/browserconfig.xml">
